@@ -14,6 +14,7 @@ Changes:
   the duration instead of showing only the last duration.
 - Use kspell2
 - Now PresSpeed is into each page
+- Now PageUp/PageDown during presentation go to beginning of the next/previous slide
 
 Changes after KPresenter 1.3 RC1
 ================================
